updating experience and about section

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,8 @@
 <div class="container about-container">
+  <h2 class="about-section-header">Professional Experience</h2>
+  <section>
+    <p>After graduating from The Iron Yard's Front End Engineering program, I joined an Agile team at AT&T as a Junior Fullstack Developer. I now use Javascript and Perl every day to solve problems. Whether I'm refactoring  a broken module or creating a new integration test, I work hard to write clean, logical code. In addition to testing and adding functionality to the backend, I also am one of our team's frontend specialists. I have made several significant contributions to the our tool's frontend functionality and user experience. I've also worked closely with one of our senior developers to start testing our frontend using Mocha and Chai. I find Test Driven Development to not only be necessary, but extremely useful as we work to build new features, fix complex bugs, and collaborate on our tool.</p>
+  </section>
   <h2 class="about-section-header">My Journey</h2>
   <section>
       <p>My passion for front‐end development began when I first introduced a class of middle schoolers to robotics. My students and I were all hooked when we started to direct our LEGO robot using basic JavaScript commands; applause for the lift of the arms, uncontrollable laughter at the sputtering wheels. It felt odd to watch that half-finished robot hold the attention of 13-year-olds for more than a minute, but even more odd to realize that I was hooked as well. The more I learned alongside my students, the more eager I became to learn more on my own.</p>
@@ -10,13 +14,8 @@
         <div class="section-pup2"></div>
         <div class="section-unc"></div>
       </div>
-      <p>Outside of development, I love spending time with my pups Riley and Weezy. You can also find me riding my bicycle all over the triangle, hitting up local breweries, or watching the Tar Heels play in Chapel Hill. I'm actively looking for employment here in the triangle, so if you're looking for a driven, coachable, competent developer with an unmatched desire for perfection, you can, again, probably find me on my bike. Or, you can reach me <a href="https://www.linkedin.com/in/dhackelman/" target="_blank" >here.</a></p>
+      <p>Outside of development, I spend time with my dogs Riley and Weezy. You can also find me riding all over the triangle, hitting up local breweries, or watching the Tar Heels play in Chapel Hill. I'm actively looking for employment here in the triangle, so if you're looking for a driven developer you can reach me <a href="https://www.linkedin.com/in/dhackelman/" target="_blank" >here.</a></p>
   </section>
-    <h2 class="about-section-header">Quick Take</h2>
-    <section>
-        <p>I ♡ JavaScript. It's the reason I started on this career path. It’s why I wake up early in the morning—before the dogs do. It's the reason I’m excited to hit the power button every morning. Stepping into new libraries and frameworks is a welcome challenge— finding new and interesting problems to solve using JavaScript keeps my brain excited and engaged. </p>
-        <p>Thus far I've worked on front end teams that have utilized ES6 javascript, jQuery, Angular JS, React JS, and many other small libraries. I also have experience with many other tools from the front end ecosystem that include (but aren't limited to) HTML5, CSS3, Knockout JS, Sass, Gulp, npm, GitHub, AJAX, RESTful APIs, git, and some others. </p>
-    </section>
 
     <!-- <h2 class="about-section-header">Goals</h2>
     <section>
