update home page with more recent information

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,5 +4,6 @@
     <div class="picture-holder">
     </div>
   </div>
-  <p>Graduate of The Iron Yard's immersive Front End JavaScript Engineering program. Actively seeking employment as a Front End Developer in the Durham/Triangle Area. Internet programming experience for languages and tools including JavaScript (vanilla, react, angular, and jquery), AJAX, RESTful APIs, HTML5, CSS3, SASS and npm. Before attending The Iron Yard, I devoted 6 years to working in high-need, high-performing charter schools in New Orleans and Houston. I incorporated innovative technology solutions in classrooms and schools to promote personalized and blended learning experiences for students. I'm passionate about technology and its impact on communities.</p>
+  <p>Currently working as a Junior Fullstack Developer with AT&T. Recent graduate of The Iron Yard's immersive Front End Engineering program. Experience with languages and tools including Perl, JavaScript (vanilla, react, angular, and jquery), SQL, HTML5, CSS3, and more. </p>
+  <p>Before attending The Iron Yard, I spend 6 years to working in high-need, high-performing charter schools in New Orleans and Houston. I incorporated innovative technology solutions in classrooms and schools to promote blended learning experiences for students. I'm passionate about technology and its impact on communities.</p>
 </div>
